--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-beautify": "^2.0.1",
-    "gulp-combine-mq": "^0.4.0",
     "gulp-csscomb": "^3.0.8",
     "gulp-csso": "^3.0.1",
     "gulp-data": "^1.3.1",
@@ -37,22 +36,22 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-nunjucks-render": "^2.2.3",
     "gulp-plumber": "^1.2.x",
-    "gulp-postcss": "^8.0.x",
-    "gulp-real-favicon": "^0.3.2",
+    "gulp-postcss": "9.0.1",
     "gulp-remark-lint-dko": "^1.0.2",
     "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
-    "gulp-sass": "^4.0.x",
+    "gulp-sass": "5.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-stylelint": "^8.0.0",
     "gulp-svgstore": "^7.0.1",
     "gulp-uglify": "^3.0.1",
-    "gulp-w3c-html-validator": "^1.4.3",
-    "htmlhint": "^0.11.0",
+    "htmlhint": "^1.1.4",
+    "postcss-sort-media-queries": "4.3.0",
     "require-dir": "^1.2.0",
+    "sass": "1.57.1",
     "stylelint": "^9.10.1",
     "stylelint-config-htmlacademy": "^0.1.3",
-    "stylelint-declaration-block-no-ignored-properties": "^1.1.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.6.0",
     "stylelint-order": "^2.0.0",
     "stylelint-scss": "^3.5.4"
   },
